--- a/telemed-ui/src/app/shared/components/header/header.component.html
+++ b/telemed-ui/src/app/shared/components/header/header.component.html
@@ -36,7 +36,7 @@
        <div class="d-none d-lg-flex align-items-center">
            <!-- No Login/Register here -->
            <ng-container *ngIf="isLoggedIn && userInfo">
-              <span class="user-info-text me-3">Welcome, {{ userInfo.username || 'User' }}!</span>
+              <span class="user-info-text me-3"> {{ userInfo.username || '' }}!</span>
               <button class="btn btn-outline-danger btn-sm" (click)="logout()">Logout</button>
            </ng-container>
        </div>
